# FilipKuncCom

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  astro.config.mjs  deploy.sh  package-lock.json  package.json  playwright.config.ts  rollback.sh  run-local.sh  snippet-manifest.json  tsconfig.json
.githooks/: pre-commit
ansible/: ansible.cfg  inventory.yml.example  playbook.yml
ansible/files/: Caddyfile  filipkunc-com.container
bench/normals/: gen-mesh.mjs  run-cuda.cu  run-js.mjs  run-opencl.c  run-opencl.cl  run-slang-host.c  run-slang.slang  run-wgsl.mjs
bench/tcmalloc/: .bazelrc  BUILD.bazel  MODULE.bazel  alloc_bench.cpp  arena.h
e2e/: cloth.spec.ts  flowfield.spec.ts  hb-editor-bench.spec.ts  hb-editor-compare.spec.ts  hb-editor-edit.spec.ts  hb-editor.spec.ts  normals.spec.ts
public/: robots.txt
public/gentis/: WebGLGame.js  WebGLGame.wasm  index.html
public/meshmaker/: index.html
public/meshmaker/assets/: index-D9kJv8e9.css  index-DnfPmDBs.js
public/meshmaker/wasm/: MeshMakerWebGL2.js  MeshMakerWebGL2.wasm
public/space-warrior/: index.data  index.html  index.js  index.wasm
scripts/: bench-allocators.mjs  bench-codesearch.mjs  bench-normals.mjs  compress-dist.mjs  gen-og.mjs  update-meshmaker.sh  verify-snippets.mjs
scripts/addon-example/: .gitignore  README.md  build-all.sh  build-commands.sh  package-lock.json  package.json  tsconfig.json
scripts/addon-example/cpp/: CMakeLists.txt  binding.cpp  deflate.cpp  deflate.hpp
scripts/addon-example/cpp/test/: deflate_test.cpp
scripts/addon-example/nan/: binding.gyp  nan_binding.cpp
scripts/addon-example/rust/: Cargo.toml  package-lock.json  package.json
scripts/addon-example/rust/src/: lib.rs
scripts/addon-example/ts/: lib.test.ts  usage.ts  wasm-loader.ts  wasm.test.ts
scripts/addon-example/wasm/: wasm_binding.c
scripts/flowfield/: Cargo.toml  build-wasm.sh
scripts/flowfield/js/: demo.mjs  diagrams.mjs  flowfield.mjs  render.mjs
scripts/flowfield/src/: agents.rs  field.rs  lib.rs
scripts/flowfield/test/: flowfield.test.mjs
scripts/hb-editor/: README.md  build-wasm.sh  serve.mjs  trace.mjs
scripts/hb-editor/src/: demo-bench.mjs  demo-compare.mjs  demo-editor.mjs  demo-ligature.mjs  doc.mjs  editor.mjs  gputimer.mjs  hb.mjs  lazy.mjs  renderer.mjs  shim.c  theme.mjs
scripts/hb-editor/test/: doc.test.mjs  smoke.test.mjs
scripts/hb-editor/web/: index.html  main.mjs
scripts/hb-editor/web/bench/: index.html  main.mjs
scripts/hb-editor/web/compare/: index.html  main.mjs
scripts/hb-editor/web/editor/: index.html  main.mjs
src/: content.config.ts  env.d.ts  server.js
src/components/: AllocBench.astro  BenchTable.astro  ClothLab.tsx  CodeFile.astro  CodeSearchBench.astro  CodeTabs.astro  DiagramColoring.astro  DiagramEmbed.astro  DiagramFlow.astro  DiagramLoop.astro  DiagramNormal.astro  DiagramPipelines.astro  DiagramSpring.astro  DiagramTrigram.astro  DiagramTypeWalk.astro  Excerpt.astro  FlowDiagram.astro  FlowField.astro  HbCompare.astro  HbEditor.astro  HbLigature.astro  HbZoomBench.astro  Mermaid.tsx  NormalsLab.tsx  RunnableSnippet.astro  SemanticBench.astro  TypeProbe.tsx
src/content/posts/code-search/: bench-results.json  index.mdx  semantic-results.json
src/content/posts/code-search/semantic/: README.md  embed.py  pyproject.toml
src/content/posts/cpp-data-races/: bench-results.json  index.mdx
src/content/posts/gemini-game-art/: gemini_client.py  index.mdx
src/content/posts/gpu-normals/: bench-results.json  index.mdx
src/content/posts/header-only-libs/: index.mdx
src/content/posts/hello-world/: index.mdx
src/content/posts/local-llm-arena/: index.mdx
src/content/posts/meshmaker/: index.mdx
src/layouts/: Layout.astro
src/lib/: code-theme.ts  snippets.ts
src/lib/gpu-cloth/: cloth-renderer.ts  grid.ts
src/lib/gpu-normals/: cpu-normals.ts  mesh.ts  webgpu-renderer.ts
src/lib/typeprobe/: examples.ts  generate-validator.ts  infer.ts  monaco-setup.ts
src/pages/: index.astro  llms.txt.ts  rss.xml.ts
src/pages/posts/: [...slug].astro  index.astro
src/server/: index.ts  tsconfig.json
(+72 files in other folders)
